<resources>
    <string name="app_name">UberDriver</string>
    <string name="sign_in_with_phone">Sign In With Phone</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="continue_text">Continue</string>
    <string name="register_text">Let\'s start with creating your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="register_txt">Register</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="rate">0.0</string>
    <string name="name">Name</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="rider_name">Rider Name : example</string>
    <string name="rider_number">Rider Number : 123456789</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_rider_request">New Rider Request</string>
    <string name="pickup">Pick Up Rider</string>
    <string name="finishTrip">Finish The Trip</string>
</resources>